Created helper methods to read labels and image files

--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -152,7 +152,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="NaiveBayes.cpp" />
+    <ClCompile Include="ImageLabelsData.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ImageLabelsData.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
