Added helper methods to calculate prior probability of labels

--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="ImageLabelsData.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TrainingData.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ImageLabelsData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TrainingData.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
