--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -154,6 +154,7 @@
   <ItemGroup>
     <ClCompile Include="ClassifyingData.cpp" />
     <ClCompile Include="ImageLabelsData.cpp" />
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="TrainingData.cpp" />
   </ItemGroup>
   <ItemGroup>
