Loads model in to a file

--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -164,6 +164,10 @@
     <ClInclude Include="ImageLabelsData.h" />
     <ClInclude Include="TrainingData.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\..\..\..\..\naivebayes-TinaKong83\MapLabelPriors.txt" />
+    <Text Include="..\..\..\..\..\naivebayes-TinaKong83\WriteClassWhiteFeatureProb.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
